sts.yaml
apiVersion: v1
kind: Service
metadata:
  name: opfsts-test-svc
  labels:
    app: opfsts-test
spec:
  type: NodePort
  ports:
  - port: 8085
    nodePort: 30065
  selector:
    app: opfsts-test
---
apiVersion: extensions/v1beta1

kind: Deployment
metadata:
  name: opfsts-test
spec:
  replicas: 2
  template:
    metadata:
      annotations:
        federation.kubernetes.io/deployment-preferences: |
          {
            "rebalance": true,
            "clusters": {
              "east-cluster": {
                  "minReplicas": 1
              },
              "west-cluster": {
                  "minReplicas": 1
              }
            }
          }
      labels:
        app: opfsts-test
    spec:
      containers:
        - name: opfsts-test
          image: damitha38/opfsts
          ports:
            - containerPort: 8085
