customerportal_sts_service_ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  annotations: 
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: xbanks-ingress-ip
  name: paymentsservice-ingress
spec: 
  rules: 
    - 
      http: 
        paths: 
          - 
            backend: 
              serviceName: opfsts-test-svc
              servicePort: 8085
            path: /*
